@@ -8,6 +8,9 @@
   dispatcher, to be called after request generation, but before routing. This
   change breaks BC as it adds a new method to the ezcMvcDispatcherConfiguration
   interface.
+- Implemented issue #13921: The ezcMvcConfigurableDispatcher now throws
+  exceptions if the configuration does not return objects of the expected
+  class.
 
 
 1.0alpha2 - Monday 10 November 2008
